# qasterix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.qrc
cmake/: cmake-uninstall.cmake.in  docs.cmake  installs.cmake  packaging.cmake
cmake/config/: config.cmake.in  qasterix-config.cmake.in
examples/: CMakeLists.txt  main.cpp
include/qasterix/: AsterixDecoder  AsterixEncoder  AsterixLibrary
include/qasterix/export/: qasterix_export.h
include/qasterix/internal/: asterixdecoder.h  asterixencoder.h  asterixlibrary.h
src/: asterixconfigkeeper.cpp  asterixconfigkeeper.h  asterixdecoder.cpp  asterixencoder.cpp  asterixlibrary.cpp  asterixnames.h
tests/: CMakeLists.txt  asterixtest.cpp  asterixtest.h  main.cpp
